# gemini-endpoint-advisor

./: README.md  pyproject.toml
configs/: example_config.yaml
src/gemini_endpoint_advisor/: __init__.py  cli.py  config.py  gemini_advisor.py  jamf_client.py
